Bug#68523: ResultSet::getString does not return fractional seconds from DATETIME(N) columns